Created attachment 210423 [details] Photo of panic In trying a -current build with the 20200102 media, I encountered a kernel panic from a bad assertion. Screenshot attached, and I'll be happy to gather more data. It gives me a usable debugger prompt, so we can explore, if someone can guide me. I can also see about reproducing it in a VM so I'm not a gating factor.
To get to where I was in the screenshot, boot, select a live session, and enter these two commands: mkdir /tmp/etc mount_unionfs /tmp/etc /etc
Context of my attempt: https://wiki.freebsd.org/MasonLoringBliss/InstallEnvironment
CC'ing kib and mjg for vfs expertise.
The amazing folks in Freenode #freebsd have nailed it down: 14:47 < RhodiumToad> everywhere else, VOP_UNLOCK is called as VOP_UNLOCK(vp,0) 14:48 < RhodiumToad> unionfs uses VOP_UNLOCK(vp,LK_RELEASE), which I suspect is just an obsolete form from years back ... 14:51 < RhodiumToad> anyway, unionfs can probably be fixed trivially 14:52 < kevans91> yeah, looks like it just has a dozen or so VOP_UNLOCK invocations that are incorrect related: 14:50 < kevans91> I thought mjg was cooking up something to drop the second argument entirely 14:50 < kevans91> ah, yeah: - Exp-run PR 240156 to remove flags argument from VOP_UNLOCK 14:50 < VimDiesel> 240156 – Remove flags argument from VOP_UNLOCK https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=240156 14:51 < kevans91> https://reviews.freebsd.org/D21427 14:51 < VimDiesel> Title: ⚙ D21427 vfs: remove flags argument from VOP_UNLOCK (at reviews.freebsd.org)
I'll sort this out, note however that unionfs will likely panic on something else when debug is enabled.
A commit references this bug: Author: mjg Date: Fri Jan 3 22:12:26 UTC 2020 New revision: 356336 URL: https://svnweb.freebsd.org/changeset/base/356336 Log: unionfs: fix up VOP_UNLOCK use after flags stopped being supported For the most part the code was passing the LK_RELEASE flag. The 2 cases which did not use the VOP_UNLOCK_FLAGS macro. This fixes a panic when stacking unionfs on top of e.g., tmpfs when debug is enabled. Note there are latent bugs which prevent unionfs from working with debug regardless of this change. PR: 243064 Reported by: Mason Loring Bliss Changes: head/sys/fs/unionfs/union_subr.c head/sys/fs/unionfs/union_vfsops.c head/sys/fs/unionfs/union_vnops.c
Regarding your comment, "Note there are latent bugs which prevent unionfs from working with debug regardless of this change," I'm wondering if these are described anywhere, or should I report them as I slam into them? Thanks!
Mateusz, Hello again! My apologies if this was unclear or if you're simply busy, but this question was directed at you. Regarding your comment, "Note there are latent bugs which prevent unionfs from working with debug regardless of this change," I'm wondering if these are described anywhere, or should I report them as I slam into them? Thanks!